--- a/BE.Core.FW/Backend/appsettings.json
+++ b/BE.Core.FW/Backend/appsettings.json
@@ -148,5 +148,12 @@
     "ExcelPackage": {
       "LicenseContext": "Commercial" //The license context used
     }
+  },
+  "ImportTemplateFilePath": {
+    "Template_Import_Product": "\\OutputExcel\\Template_Import_Product.xlsx",
+    "Payment": "\\Template\\template-import-payment-sample.xlsx",
+    "Code": "\\Template\\template-import-code-sample.xlsx",
+    "Schedule": "\\Template\\template-import-schedule-sample.xlsx",
+    "Score": "\\Template\\template-import-score-sample.xlsx"
   }
 }
