--- a/BE.Core.FW/Backend/Backend.csproj
+++ b/BE.Core.FW/Backend/Backend.csproj
@@ -68,6 +68,7 @@
 		<PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
 		<PackageReference Include="Serilog.Sinks.Elasticsearch" Version="9.0.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+		<PackageReference Include="Spire.XLS" Version="13.10.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 	</ItemGroup>
 	<ItemGroup>
