--- a/BE.Core.FW/Backend/appsettings.json
+++ b/BE.Core.FW/Backend/appsettings.json
@@ -151,9 +151,8 @@
   },
   "ImportTemplateFilePath": {
     "Template_Import_Product": "\\OutputExcel\\Template_Import_Product.xlsx",
+    "Template_Import_Customer": "\\OutputExcel\\Template_Import_Customer.xlsx",
     "Payment": "\\Template\\template-import-payment-sample.xlsx",
-    "Code": "\\Template\\template-import-code-sample.xlsx",
-    "Schedule": "\\Template\\template-import-schedule-sample.xlsx",
-    "Score": "\\Template\\template-import-score-sample.xlsx"
+    "Code": "\\Template\\template-import-code-sample.xlsx"
   }
 }
