--- a/BE.Core.FW/Backend/appsettings.json
+++ b/BE.Core.FW/Backend/appsettings.json
@@ -152,6 +152,7 @@
   "ImportTemplateFilePath": {
     "Template_Import_Product": "\\OutputExcel\\Template_Import_Product.xlsx",
     "Template_Import_Customer": "\\OutputExcel\\Template_Import_Customer.xlsx",
+    "Template_Import_Target": "\\OutputExcel\\Mau_giao_Target.xlsx",
     "Payment": "\\Template\\template-import-payment-sample.xlsx",
     "Code": "\\Template\\template-import-code-sample.xlsx"
   }
