--- a/BE.Core.FW/Backend/Backend.csproj
+++ b/BE.Core.FW/Backend/Backend.csproj
@@ -41,6 +41,7 @@
 		<PackageReference Include="EPPlus" Version="6.1.2" />
 		<PackageReference Include="ExcelDataReader-OptionalStreams" Version="3.4.1" />
 		<PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
+		<PackageReference Include="FirebaseAdmin" Version="2.4.0" />
 		<PackageReference Include="Hangfire.AspNetCore" Version="1.8.2" />
 		<PackageReference Include="Hangfire.Dashboard.Basic.Authentication" Version="5.0.0" />
 		<PackageReference Include="Hangfire.Redis.StackExchange" Version="1.9.0" />
